--- a/MainVisualization.qmd
+++ b/MainVisualization.qmd
@@ -28,32 +28,45 @@ cancer_data_2019 <- cancer_data %>%
 
 # Remove "Total cancers" and "Total excl. non-melanoma" from the dataset
 cancer_data_2019 <- cancer_data_2019 %>%
-  filter(!cause_name %in% c("Total cancers", "Total Cancers excluding Non-melanoma skin cancer"))
+      filter(!cause_name %in% c("Total cancers", "Total Cancers excluding Non-melanoma skin cancer"))
 
-# Show the head of the filtered dataset
-head(cancer_data_2019)
-```
-
-```{r}
-# Shorten the long cancer names
+# Define new cancer groups
 cancer_data_2019 <- cancer_data_2019 %>%
-  mutate(cause_name = case_when(
-    cause_name == "Tracheal, bronchus, and lung cancer" ~ "Lung cancer",
-    cause_name == "Soft tissue and other extraosseous sarcomas" ~ "Soft tissue sarcomas",
-    cause_name == "Malignant neoplasm of bone and articular cartilage" ~ "Bone cancer",
-    cause_name == "Neuroblastoma and other peripheral nervous cell tumors" ~ "Neuroblastoma",
-    cause_name == "Total Cancers excluding Non-melanoma skin cancer" ~ "Total excl. non-melanoma",
-    cause_name == "Non-Hodgkin lymphoma" ~ "NHL",
-    cause_name == "Other malignant neoplasms" ~ "Other malignancies",
-    cause_name == "Other neoplasms" ~ "Other neoplasms",
-    cause_name == "Brain and central nervous system cancer" ~ "Brain cancer",
+  mutate(cause_group = case_when(
+    cause_name %in% c("Eye cancer", "Soft tissue and other extraosseous sarcomas", "Malignant neoplasm of bone and articular cartilage", "Neuroblastoma and other peripheral nervous cell tumors") ~ "Rare cancers",
+    cause_name %in% c("Breast cancer", "Cervical cancer", "Uterine cancer", "Prostate cancer", "Ovarian cancer", "Testicular cancer") ~ "Reproductive cancers",
+    cause_name %in% c("Colon and rectum cancer", "Stomach cancer", "Esophageal cancer") ~ "Digestive system cancers",
+    cause_name %in% c("Lip and oral cavity cancer", "Nasopharynx cancer", "Other pharynx cancer", "Larynx cancer") ~ "Head and neck cancers",
+    cause_name %in% c("Gallbladder and biliary tract cancer", "Liver cancer", "Pancreatic cancer") ~ "Liver and pancreas cancers",
+    cause_name %in% c("Malignant skin melanoma", "Non-melanoma skin cancer") ~ "Skin cancers",
+    cause_name %in% c("Kidney cancer", "Bladder cancer") ~ "Urinary system cancers",
+    cause_name %in% c("Brain and central nervous system cancer") ~ "Brain cancers",
+    cause_name %in% c("Thyroid cancer") ~ "Thyroid cancers",
+    cause_name %in% c("Mesothelioma") ~ "Mesothelioma",
+    cause_name %in% c("Hodgkin lymphoma", "Non-Hodgkin lymphoma") ~ "Lymphomas",
+    cause_name %in% c("Multiple myeloma") ~ "Multiple myeloma",
+    cause_name %in% c("Leukemia") ~ "Leukemia",
+    cause_name %in% c("Tracheal, bronchus, and lung cancer") ~ "Lung cancer",
+    cause_name %in% c("Other malignant neoplasms", "Other neoplasms") ~ "Other cancers",
     TRUE ~ cause_name
   ))
+
+# TODO:  Find out about proper classifications of cancer to help support our groupings and change it if necessary
+
+
+# TODO: Create the sequential color scheme for both female and male (reference the picture sent in the group)
+
+
+# Group by new cancer groups and sum the values
+cancer_data_grouped <- cancer_data_2019 %>%
+  group_by(cause_group, sex_name) %>%
+  summarise(val = sum(val, na.rm = TRUE))
+
 ```
 
 ```{r}
 # Pivot the data
-cancer_data_long <- cancer_data_2019 %>%
+cancer_data_long <- cancer_data_grouped %>%
   pivot_wider(names_from = sex_name, values_from = val, values_fill = list(val = 0))
 
 # Round the values to 2 decimal places
@@ -61,14 +74,13 @@ cancer_data_long <- cancer_data_long %>%
   mutate(across(c(Male, Female), round, 2))
 ```
 
-```{r}
+```{r} 
 # Base Plot
 
-# Adjust the sign for female deaths to create a bi-directional effect
-cancer_data_long_base <- cancer_data_long %>%
-  mutate(Female = -Female)
+# TODO: Make the asthetics of the plot more visually appealing (In terms of shifting around the elements, resizing the plot and ect...)
 
-p <- ggplot(cancer_data_long_base, aes(x = reorder(cause_name, abs(Female) + Male))) +
+# Create the plot
+p <- ggplot(cancer_data_long_base, aes(x = reorder(cause_group, abs(Female) + Male))) +
   geom_bar(aes(y = Male, fill = "Male"), stat = "identity", width = 0.8) +
   geom_bar(aes(y = Female, fill = "Female"), stat = "identity", width = 0.8) +
   coord_flip() +
@@ -95,48 +107,6 @@ p
 
 ```
 
-```{r}
-# Rev 2: Create a combined plot with color gradients for intensity
-
-cancer_data_long_rev2 <- cancer_data_long %>%
-  mutate(Female = -Female)
-
-# Create color gradients for intensity
-cancer_data_long_rev2 <- cancer_data_long_rev2 %>%
-  mutate(Male_fill = scales::rescale(Male),
-         Female_fill = scales::rescale(abs(Female)))
-# Create the combined plot with distinct color gradients
-p_combined <- ggplot() +
-  geom_bar(data = cancer_data_long_rev2, aes(x = reorder(cause_name, abs(Female) + Male), y = Male, fill = Male), 
-           stat = "identity", width = 0.8) +
-  scale_fill_gradientn(name = "Male Deaths", colors = c("lightblue", "blue", "darkblue")) +
-  new_scale_fill() +
-  geom_bar(data = cancer_data_long_rev2, aes(x = reorder(cause_name, abs(Female) + Male), y = Female, fill = Female), 
-           stat = "identity", width = 0.8) +
-  scale_fill_gradientn(name = "Female Deaths", colors = c("lightpink", "red", "darkred")) +
-  coord_flip() +
-  scale_y_continuous(labels = abs) +
-  labs(title = "Cancer Deaths by Type and Gender, World, 2019",
-       x = "Cancer Type",
-       y = "Number of Deaths") +
-  theme_minimal() +
-  theme(axis.text.y = element_text(size = 10),
-        axis.title.y = element_text(size = 12),
-        axis.title.x = element_text(size = 12),
-        plot.title = element_text(size = 16, face = "bold"),
-        legend.position = "top") +
-  geom_text(data = cancer_data_long_rev2, aes(x = reorder(cause_name, abs(Female) + Male), y = Male, label = formatC(Male, format = "d", big.mark = ",")), 
-            position = position_stack(vjust = 0.5), hjust = -0.1, size = 3, color = "blue") +
-  geom_text(data = cancer_data_long_rev2, aes(x = reorder(cause_name, abs(Female) + Male), y = Female, label = formatC(abs(Female), format = "d", big.mark = ",")), 
-            position = position_stack(vjust = 0.5), hjust = 1.1, size = 3, color = "red")
-
-# Save the combined plot
-ggsave("Cancer_Deaths_by_Type_and_Gender_2019_Combined.png", plot = p_combined, width = 20, height = 15, dpi = 300)
-
-# Display the combined plot
-p_combined
-
-```
 
 ```{r}
 
