--- a/cancer_poster.qmd
+++ b/cancer_poster.qmd
@@ -189,9 +189,8 @@ g
 
 # Further Suggestions for Interactivity
 
-Because our visualization was intended for a poster, we did not implement any interactive features, including the infotip. However, if the data are visualized in an HTML document, interactive features can be achieved using the R packages such as *plotly*. In that case, we recommend that the tile does not change its fill color. In contrast, the original visualization changes the fill color of the activated tile to light blue (see @fig-infotip_color_change), which can be misinterpreted as a change in incidence. Instead, we suggest highlighting the activated tile by thickening its border.
-
+As our visualization is designed for static clarity on a poster, it might be lacking some interactivity. Moving to a digital format like HTML with tools such as Plotly in R could enhance user engagement. Features like hover-over tooltips (values, etc), detailed categorical breakdowns (specific cancer organ), and yearly trend analysis would provide further dynamic insights and enrich user interaction.
 
 # Conclusion
 
-We successfully implemented all suggested improvements for the non-interactive visualization. By labeling every state and choosing a colorblind-friendly palette, the revised plot is more accessible. The logarithmic color scale makes the decrease in incidence after the introduction of the vaccine less striking but enables readers to detect patterns in the low-incidence range more easily.
+We successfully addressed our initial criticisms of the old visualization and implemented our improvements in our new visualization. By ensuring consistent cancer type categorization and including data split by gender in a bi-directional graph, the updated chart now offers a clearer and more detailed view. We also improved accessibility with a colorblind-safe palette and added a detailed legend, enhancing overall visual appeal. These enhancements aim to make the visualization more user-friendly and inclusive, enabling deeper exploration and understanding of disease trends across genders for a diverse audience.
