--- a/MainVisualization.qmd
+++ b/MainVisualization.qmd
@@ -41,7 +41,7 @@ cancer_data_2019 <- cancer_data %>%
 ```{r}
 # Remove "Total cancers" and "Total excl. non-melanoma" from the dataset
 cancer_data_2019 <- cancer_data_2019 %>%
-      filter(!cause_name %in% c("Total cancers", "Total Cancers excluding Non-melanoma skin cancer"))
+      filter(!cause_name %in% c("Total cancers", "Total Cancers excluding Non-melanoma skin cancer", "Other malignant neoplasms", "Other neoplasms"))
 ```
 
 ```{r}
@@ -50,7 +50,7 @@ cancer_data_2019 <- cancer_data_2019 %>%
   mutate(cause_group = case_when(
     cause_name %in% c("Soft tissue and other extraosseous sarcomas") ~ "Soft tissue",
     cause_name %in% c("Neuroblastoma and other peripheral nervous cell tumors") ~ "Nerve",
-    cause_name %in% c("Breast cancer", "Cervical cancer", "Uterine cancer", "Prostate cancer", "Ovarian cancer", "Testicular cancer") ~ "Reproductive",
+    cause_name %in% c("Breast cancer", "Cervical cancer", "Uterine cancer", "Prostate cancer", "Ovarian cancer", "Testicular cancer") ~ "Reproductive system",
     cause_name %in% c("Colon and rectum cancer", "Stomach cancer", "Esophageal cancer") ~ "Digestive system",
     cause_name %in% c("Lip and oral cavity cancer", "Nasopharynx cancer", "Other pharynx cancer", "Larynx cancer") ~ "Head and neck",
     cause_name %in% c("Gallbladder and biliary tract cancer", "Liver cancer", "Pancreatic cancer") ~ "Liver and pancreas",
@@ -59,15 +59,17 @@ cancer_data_2019 <- cancer_data_2019 %>%
     cause_name %in% c("Brain and central nervous system cancer") ~ "Brain",
     cause_name %in% c("Thyroid cancer") ~ "Thyroid",
     cause_name %in% c("Mesothelioma") ~ "Mesothelioma",
-    cause_name %in% c("Hodgkin lymphoma", "Non-Hodgkin lymphoma") ~ "Lymphomas",
-    cause_name %in% c("Multiple myeloma") ~ "Multiple Myeloma",
+    cause_name %in% c("Hodgkin lymphoma", "Non-Hodgkin lymphoma") ~ "Lymphoma",
+    cause_name %in% c("Multiple myeloma") ~ "Plasma",
     cause_name %in% c("Leukemia") ~ "Leukemia",
     cause_name %in% c("Tracheal, bronchus, and lung cancer") ~ "Lung",
-    cause_name %in% c("Other malignant neoplasms", "Other neoplasms") ~ "Others (Neoplasms)",
+    cause_name %in% c("Other malignant neoplasms", "Other neoplasms") ~ "Other Neoplasms",
     cause_name %in% c("Malignant neoplasm of bone and articular cartilage") ~ "Bone and cartilage",
     cause_name %in% c("Eye cancer") ~ "Eye",
     TRUE ~ cause_name
   ))
+
+
 ```
 
 ```{r}
@@ -98,8 +100,8 @@ cancer_data_long_base <- cancer_data_long |>
 # Geoms
 
 p <- ggplot(cancer_data_long_base, aes(x = reorder(cause_group, abs(Female) + Male))) +
-  geom_bar(aes(y = Male, fill = "Male"), stat = "identity") +
-  geom_bar(aes(y = Female, fill = "Female"), stat = "identity") +
+  geom_bar(aes(y = Male, fill = "Male"), stat = "identity", width = 0.9) +
+  geom_bar(aes(y = Female, fill = "Female"), stat = "identity", width = 0.9) +
   coord_flip()
 
 p
@@ -111,7 +113,7 @@ p
 p <- p +
   labs(
     title = "Cancer Deaths by Type, Gender in 2019",
-    subtitle = "Total global annual number of deaths from cancers by type and sexes",
+    subtitle = "Total global annual number of deaths from cancers by type and gender",
     x = "Type",
     y = "Number of Deaths",
     fill = "Gender",
@@ -126,7 +128,7 @@ p
 
 max_value <- max(abs(cancer_data_long_base$Male), abs(cancer_data_long_base$Female))
 
-limit <- max_value * 1.1
+limit <- max_value * 1.15
 
 p <- p +
   scale_y_continuous(
@@ -150,17 +152,21 @@ p
 # Data Annotations
 
 p <- p +
-  geom_text(
+  geom_label(
     aes(y = Female, label = formatC(abs(Female), format = "d", big.mark = ",")),
     position = position_nudge(x = -0.05, y = 0),  # Nudge slightly to the left
     hjust = 1.1, 
-    size = 4
+    size = 4,
+    fill = "white",
+    label.size = 0 
   ) +
-  geom_text(
+  geom_label(
     aes(y = Male, label = formatC(Male, format = "d", big.mark = ",")),
     position = position_nudge(x = 0.05, y = 0),  # Nudge slightly to the right
     hjust = -0.1,
-    size = 4
+    size = 4,
+    fill = "white",
+    label.size = 0 
   )
 
 p
@@ -177,12 +183,17 @@ p <- p +
     axis.title.y = element_text(size = 16),
     axis.title.x = element_text(size = 16),
     plot.title = element_text(size = 20, face = "bold"),
+    plot.subtitle = element_text(size = 14), 
     legend.title = element_text(size = 14, hjust = 0.5),
     legend.text = element_text(size = 14),
     legend.position = "top",
-    plot.caption = element_text(size = 12)
+    plot.caption = element_text(size = 12),
+    panel.grid.major.y = element_line(color = "white"),  # Darker major grid lines
+    panel.grid.major.x = element_line(color = "grey80"),  # Darker major grid lines
+    panel.grid.minor.x = element_line(color = "grey80"),  # Darker major grid lines
   ) +
   theme(
+    plot.subtitle = element_text(margin = margin(b = 10)),
     plot.margin = margin(t = 10, r = 10, b = 10, l = 10),
     axis.title.x = element_text(margin = margin(t = 15, r = 10, b = 10, l = 10)),
     axis.title.y = element_text(margin = margin(t = 10, r = 15, b = 10, l = 10)),
@@ -191,6 +202,11 @@ p <- p +
   )
 
 p
+```
+```{r}
+# Color Schemes
+
+
 ```
 
 ## Experimental features below
