--- a/cancer_poster.qmd
+++ b/cancer_poster.qmd
@@ -26,17 +26,23 @@ library(knitr)
 #source("measles_prep.R")
 ```
 
-
 # Introduction
 
-Measles is a highly contagious viral infection that can lead to severe complications, including pneumonia, encephalitis, and death. The average number of secondary cases resulting from a single infected individual is estimated to be between 10 and 16,[^guerra_basic_2017] but vaccination is reported to be 97% effective at preventing measles[^franconeri_two-dose_2023]. Consequently, the introduction of the vaccine in 1963 was followed by a significant decline in measles incidence in the USA.
+Cancer is a group of diseases defined by the rapid proliferation of abnormal cells. It is the second largest cause of death worldwide. These cells have the potential to severely compromise one's health by invading surrounding tissues and, in some instances, spreading through other parts of the human body through the blood and lymphatic systems. In 2019, the Global Burden of Disease study found that approximately 10 million deaths worldwide, or one in six deaths were attributable to cancer.[^1]
 
-[^guerra_basic_2017]: F. M. Guerra et al., “The basic reproduction number (R0) of measles: a systematic review,” The Lancet Infectious Diseases, vol. 17, no. 12, p. e420-e428, 2017
-[^franconeri_two-dose_2023]: L. Franconeri et al., “Two-dose measles vaccine effectiveness remains high over time: A French observational study, 2017–2019,” Vaccine, vol. 41, no. 39, pp. 5797–5804, 2023]
+Measles is a highly contagious viral infection that can lead to severe complications, including pneumonia, encephalitis, and death. The average number of secondary cases resulting from a single infected individual is estimated to be between 10 and 16,[^1] but vaccination is reported to be 97% effective at preventing measles[^2]. Consequently, the introduction of the vaccine in 1963 was followed by a significant decline in measles incidence in the USA.
 
-Given persistent skepticism in some communities about the efficacy of vaccines, it is important to communicate the impact of vaccination on public health. In this project, we built on a visualization of the measles incidence in the USA published by the Wall Street Journal[^debold_battling_2015] (@fig-wsj-on-poster). This visualization has garnered praise as "One of the more compelling data visualizations produced in recent years"[^lee_reproducing_2017]. However, we contend that, despite its effectiveness in summarizing data, several aspects of the plot can be improved.
 
-[^lee_reproducing_2017]: <https://www.mikelee.co/posts/2017-06-28-wsj-measles-vaccination-chart>
+
+[^1]: National Cancer Institute. Cancer Statistics [Internet]. Bethesda, MD: National Cancer Institute; [cited 2024 Jun 28]
+
+[^2]: L. Franconeri et al., “Two-dose measles vaccine effectiveness remains high over time: A French observational study, 2017–2019,” Vaccine, vol. 41, no. 39, pp. 5797–5804, 2023\]
+
+Given persistent skepticism in some communities about the efficacy of vaccines, it is important to communicate the impact of vaccination on public health. In this project, we built on a visualization of the measles incidence in the USA published by the Wall Street Journal[^3] (@fig-wsj-on-poster). This visualization has garnered praise as "One of the more compelling data visualizations produced in recent years"[^4]. However, we contend that, despite its effectiveness in summarizing data, several aspects of the plot can be improved.
+
+[^3]: <https://graphics.wsj.com/infectious-diseases-and-vaccines/>
+
+[^4]: <https://www.mikelee.co/posts/2017-06-28-wsj-measles-vaccination-chart>
 
 # Previous Visualization
 
@@ -49,19 +55,11 @@ Given persistent skepticism in some communities about the efficacy of vaccines, 
 include_graphics("images/wsj_cropped.png")
 ```
 
-[^debold_battling_2015]: <https://graphics.wsj.com/infectious-diseases-and-vaccines/>
-
 # Strengths
 
-*   The heatmap design effectively conveys a high information content without
-    cluttering the plot.
-*   Pointing with the mouse at a tile opens an infotip, enabling readers to
-    retrieve specific incidence data for a given state and
-    year (@fig-infotip_color_change). The infotip only occludes a small
-    portion of the plot, and the partial transparency of the infotip ensures
-    visibility of the tiles underneath.
-*   The vertical line indicating the year of vaccine introduction provides
-    valuable contextual information.
+-   The heatmap design effectively conveys a high information content without cluttering the plot.
+-   Pointing with the mouse at a tile opens an infotip, enabling readers to retrieve specific incidence data for a given state and year (@fig-infotip_color_change). The infotip only occludes a small portion of the plot, and the partial transparency of the infotip ensures visibility of the tiles underneath.
+-   The vertical line indicating the year of vaccine introduction provides valuable contextual information.
 
 ```{r}
 #| label: fig-infotip_color_change
@@ -72,53 +70,42 @@ include_graphics("images/wsj_cropped.png")
 include_graphics("images/infotip_color_change.png")
 ```
 
-
 # Suggested Improvements
 
-1. *Enhance informativeness* by adding demographic comparisons, such as cancer death rates by gender.
-2. *Improve clarity and understanding* on cancer death statistics by grouping similar cancer types together.
-3. Add in labsl to both the x and y-axis for *improved clarity*.
-4. Provide exact whole numbers instead of estimates to *enhance comprehension and clarity*.
-5. Incorporate a straightforward and *visually appealing* colour scheme to *improve the chart’s appearance*.
-6. Include a colour legend to explain the meaning of the colours used.
-7. Sort the values in descending order according to the total deaths to *highlight the most critical cancer types*.
-8. Include grid lines at *meaningful intervals*, such as every 500,000, considering the value range extends up to a million.
+1.  *Enhance informativeness* by adding demographic comparisons, such as cancer death rates by gender.
+2.  *Improve clarity and understanding* on cancer death statistics by grouping similar cancer types together.
+3.  Add in labsl to both the x and y-axis for *improved clarity*.
+4.  Provide exact whole numbers instead of estimates to *enhance comprehension and clarity*.
+5.  Incorporate a straightforward and *visually appealing* colour scheme to *improve the chart’s appearance*.
+6.  Include a colour legend to explain the meaning of the colours used.
+7.  Sort the values in descending order according to the total deaths to *highlight the most critical cancer types*.
+8.  Include grid lines at *meaningful intervals*, such as every 500,000, considering the value range extends up to a million.
 
 # Implementation
 
-
 ## Data
 
-*   The cancer deaths by type chart was sourced from Our World In Data [^our_world_in_data_chart]. During data preparation, unnecessary columns were removed and cancer names were abbreviated for better visualization. We rounded death values for consistency and grouped cancer types by gender, allowing us to create a bi-directional bar chart for comparing different types of cancer deaths across genders.
+-   The cancer deaths by type chart was sourced from Our World In Data [^5]. During data preparation, unnecessary columns were removed and cancer names were abbreviated for better visualization. We rounded death values for consistency and grouped cancer types by gender, allowing us to create a bi-directional bar chart for comparing different types of cancer deaths across genders.
 
-*   Data source was gathered from IHME, Global Burden of Disease. (2024) [^cancer_dataset]
+-   Data source was gathered from IHME, Global Burden of Disease. (2024) [^6]
 
-[^our_world_in_data_chart]: <https://ourworldindata.org/cancer>
-[^cancer_dataset]: <https://vizhub.healthdata.org/gbd-results/>
+[^5]: <https://ourworldindata.org/cancer>
+
+[^6]: <https://vizhub.healthdata.org/gbd-results/>
 
 ## Software
 
-In our project, we employed Quarto along with the R programming language. We integrated various third-party libraries categorized by their respective purposes:  
+In our project, we employed Quarto along with the R programming language. We integrated various third-party libraries categorized by their respective purposes:\
 \
-*Data Import:
-*readr*: reads csv files into R  
+*Data Import:* readr*: reads csv files into R\
 \
-*Data Manipulation & Tidying:
-*dplyr*: filters, selects and arranges data,
-*tidyr*: reshapes data frames to a tidy format  
+*Data Manipulation & Tidying: *dplyr*: filters, selects and arranges data, *tidyr*: reshapes data frames to a tidy format\
 \
-*Data Visualization:
-*knitr*: integrates R code and output, affects how figures are displayed in the final document,
-*ggplot2*: creates graphics based on Grammer of Graphics,
-*ggnewscale*: applies multiple colours and fill scales within plots,
-*RColorBrewer*: provides addition colour palettes for graphics,
-*scales*: handles various aspects of scaling data,
-
+*Data Visualization:* knitr*: integrates R code and output, affects how figures are displayed in the final document,* ggplot2*: creates graphics based on Grammer of Graphics,* ggnewscale*: applies multiple colours and fill scales within plots,* RColorBrewer*: provides addition colour palettes for graphics,* scales\*: handles various aspects of scaling data,
 
 ```{=typst}
 #v(2em)
 ```
-
 # Improved Visualization
 
 ```{r}
@@ -178,7 +165,6 @@ In our project, we employed Quarto along with the R programming language. We int
 # g
 
 ```
-
 
 # Further Suggestions for Interactivity
 
